<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="prize_money">Prize Money</string>
    <string name="winning_day_prize_money">50 million won a day</string>
    <string name="accumulated_prize">Accumulated prize</string>
    <string name="share_cost">Share cost</string>
    <string name="share_cost_money">15,000 won</string>
    <string name="cumulative_share_cost">Cumulative share cost</string>
    <string name="details">Details</string>
    <string name="application_withdraw">Application for Withdrawal</string>
    <string name="price_money_value">KRW</string>
    <string name="follow_person">Follow SkyCastle</string>
    <string name="contest_runner_up">Contest Runner Up</string>
    <string name="settlement_detail">We are preparing for settlement. Deposit will be made within next 3 working days</string>
    <string name="select_account">Please select an account to withdraw</string>
    <string name="withdrawal_account">Please select a withdrawal account</string>
    <string name="withdrawal_expenses">Withdrawal of shared expenses</string>
    <string name="apply_for_krw">You can apply for KRW 10,000 for sharing and winnings.
Prizes and share fees are valid for one year from the date of winning.
If you do not withdraw within one year, they will disappear in the order in which they were accumulated
According to the Income Tax Law, the amount exceeding 50,000 won will be paid excluding tax, which is 22% of prize money and shared expenses.</string>
    <string name="enter_amount">Enter the amount to share</string>
    <string name="remaining_share">Remaining share</string>
    <string name="withdrawal_fee">Enter withdrawal share fee*</string>
    <string name="select_deposit_account">Please select a deposit account</string>
    <string name="add_deposit_account">You can add a deposit account at My Page-> Settings-> Account Information.</string>
    <string name="selected_price">Selected prize</string>
    <string name="platform_and_tax_fee">Platform fee and Tax fee</string>
    <string name="actual_settlement">Actual Settlement</string>
    <string name="withdrawal_application_complete">Withdrawal Application Complete</string>
    <string name="deposit_info">The deposit will be made within 3 business days of withdrawal.</string>
    <string name="serial_sharer">Serial sharer</string>
    <string name="influencer">Influencer</string>
    <string name="good_restaurants">Good restaurants</string>
    <string name="early_bird">Early bird</string>
    <string name="weekend_warrior">Weekend warriors</string>
    <string name="library">Library</string>
    <string name="debut_success">Debut. successful.</string>
    <string name="unicorn">Unicorn</string>
    <string name="gold">gold</string>
    <string name="bronze">bronze</string>
    <string name="silver">silver</string>
    <string name="achieve">achieve</string>
        <string name="app_name">UniCon</string>
        <string name="login">Login</string>
        <string name="email_login">Email login</string>
        <string name="kakaoTalk_login">KakaoTalk Login</string>
        <string name="facebook_login">Facebook Login</string>
        <string name="google_login">Google Login</string>
        <string name="first_time">Are you here for the first time?</string>
        <string name="sign_up">Sign Up</string>
        <string name="do_you_have_a_contest">Do you have a contest?</string>
        <string name="client_login">Client login</string>
        <string name="email">E-mail*</string>
        <string name="password">Password*</string>
        <string name="forgot_password">Forgot your password ?</string>
        <string name="please_enter_email">Please enter e-mail</string>
        <string name="please_enter_valid_email">Please enter valid e-mail</string>
        <string name="please_enter_password">Please enter password</string>
        <string name="vercomp">Verification completed</string>
        <string name="accountveri">Account Verification Complete</string>
        <string name="further">Authenticate further</string>
        <string name="feed">Feed</string>
        <string name="channel">Channel</string>
        <string name="rec">Record</string>
        <string name="alarm">Alarm</string>
        <string name="my_page">My Page</string>
        <string name="contest">Contest</string>
        <string name="normal">Normal</string>
        <string name="user">\@user</string>
        <string name="following">Following</string>
        <string name="contest_organizer">\@Contest Organizer</string>
        <string name="prize">Prize</string>
        <string name="won">Won</string>
        <string name="prize_amount">1,000,000</string>
        <string name="contest_title">Contest Title</string>
        <string name="like">Like</string>
        <string name="comment">Comment</string>
        <string name="share">Share</string>
        <string name="bookmark">Bookmark</string>
        <string name="video_des">The image description placeholder #hashtag looks like this: Video description placeholder. The hash tag is: Video description #placeholder. #hashtag looks like this:</string>
        <string name="faceBook">FaceBook</string>
        <string name="when_sharing">When sharing</string>
        <string name="_100_won">+100 won</string>
        <string name="instagram">Instagram</string>
        <string name="stories">Stories</string>
        <string name="twitter">Twitter</string>
        <string name="band">Band</string>
        <string name="more">More</string>
        <string name="video_report">Video report</string>
        <string name="share_kor">Share</string>
        <string name="_200_won">+200 won</string>
        <string name="share_done">Share done</string>
        <string name="_won_left">500,286 Won left</string>
        <string name="confirm">Confirm</string>
        <string name="featured_creator">Featured Creator</string>
        <string name="refferal_client">Referral Client</string>
        <string name="ongoing_contest">Ongoing Contest</string>
        <string name="contest_under_judging">Contest Under Judging</string>
        <string name="closed_contest">Closed Contest</string>
        <string name="daily_economy">\@Daily_Economy</string>
        <string name="pegasus">Pegasus</string>
        <string name="muscle">\@Muscle</string>
        <string name="new_caps">NEW</string>
        <string name="ongoing_contest_item_text">The E-Mart web drama title can be up to 2 lines long.</string>
        <string name="remaining_period">Remaining Period</string>
        <string name="reward">Reward</string>
        <string name="remaining_period_value">00 days (~ 08/12 24:00)</string>
        <string name="reward_value">5,000,000 won</string>
        <string name="participants">Participants</string>
        <string name="participants_value">1,865 People</string>
        <string name="join">Join</string>
        <string name="text_status_closed">End</string>
        <string name="contest_end">Contest End</string>
        <string name="under_review">Under review</string>
        <string name="full_contest">Full Contest</string>
        <string name="my_contest">My Contest</string>
        <string name="contest_details">Contest Details</string>
        <string name="fishhead_curry_contest">Fishhead Curry Contest</string>
        <string name="client_name">\@Clientname</string>
        <string name="deadline">D-5 to deadline</string>
        <string name="challenge">Natural taste! Let\'s challenge Lee Seung-yun\'s fish head curry</string>
        <string name="challenge_hashtag">#Legend #Lee Seungyun # I\'m a natural person</string>
        <string name="bookmarks">Bookmarks</string>
        <string name="share_cost_remaining">Share cost remaining</string>
        <string name="contest_entry_period">Contest Entry Period</string>
        <string name="contest_judging_period">Contest Judging Period</string>
        <string name="contest_result_announcement">Contest Results Announcement</string>
        <string name="cases_value">1,234</string>
        <string name="cases">cases</string>
        <string name="contest_entry_period_value">2019.08.15 ~ 2019.08.20</string>
        <string name="contest_judging_period_value">2019.08.21 ~ 2019.08.31</string>
        <string name="contest_result_announcement_value">2019.09.01</string>
        <string name="report">Report</string>
        <string name="share_fee_details">Share fee details</string>
        <string name="judging">Judging</string>
        <string name="participation_video">Participation Video</string>
        <string name="good">Good</string>
        <string name="response_index">Response Index</string>
        <string name="contest_basic_information">Contest Basic Information</string>
        <string name="contact_name_hint">Contact Name *</string>
        <string name="contact_hint">Contact *</string>
        <string name="event_period_hint">Event period *</string>
        <string name="event_period">Event period</string>
        <string name="review_period_hint">Review period *</string>
        <string name="review_period">Review period</string>
        <string name="announcement_date_hint">Announcement Date *</string>
        <string name="announcement_date">Announcement Date</string>
        <string name="next">Next</string>
        <string name="from">From</string>
        <string name="till">Till</string>
        <string name="changing_prize_allocation">Changing prize allocation</string>
        <string name="prize_allocation_amount">Prize Allocation Amount</string>
        <string name="contest_first_place">Contest first place</string>
        <string name="five_million_won_a_day">Five million won a day</string>
        <string name="contest_second_place">Contest second place</string>
        <string name="third_contest">3rd contest</string>
        <string name="save">Save</string>
        <string name="prize_allocation_error">Prize Allocation Error</string>
        <string name="prize_allocation_error_text">The total sum of the prize allocation is less than 100% It cannot be small or large.</string>
        <string name="prize_allocation">Prize Allocation</string>
        <string name="contest_grade">Contest Grade</string>
        <string name="basic">BASIC</string>
        <string name="learn_about_unicorn_contest_pricing">Learn about Unicorn Contest Pricing</string>
        <string name="contest_total_prize_money">Contest total prize money</string>
        <string name="vat_separate">VAT * separate</string>
        <string name="change">Change</string>
        <string name="contest_amounting">Contest amounting</string>
        <string name="platform_fee">Platform fee **</string>
        <string name="_25_of_the_total_prize_money">25% of the total prize money</string>
        <string name="sum">Sum</string>
        <string name="one_day_six_hundred_twenty_five_thousand_won_tablets">One day six hundred twenty five thousand won tablets</string>
        <string name="change_pass">Password change required</string>
        <string name="temp">Temporary password login detected. Go to the Change Password page.</string>
        <string name="personal_info">Edit personal information</string>
        <string name="my_prize">My prize</string>
        <string name="my_badge">My badge</string>
        <string name="support">Support Center</string>
        <string name="terms">Terms of Use</string>
        <string name="policy_privacy">Privacy Policy</string>
        <string name="unicorn_info">Unicorn Information</string>
        <string name="logout">Log out</string>
    <string name="company_info">Company Information</string>
    <string name="hyper">Hyper sea</string>
    <string name="comp_registration">Company Registration Number</string>
    <string name="representative_name">Representative Name</string>
    <string name="business">Business Registration</string>
</resources>