<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradiant_feed_following"
    android:orientation="vertical"
    android:paddingStart="@dimen/_16sdp"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingEnd="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    android:paddingTop="@dimen/_8sdp"
    android:paddingBottom="@dimen/_8sdp">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:src="@drawable/contest_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_2sdp"
            android:gravity="center"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginLeft="@dimen/_4sdp"
            android:background="@drawable/shape_with_radius"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingBottom="@dimen/_2sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_8ssp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvVideoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:ellipsize="end"
        android:lines="3"
        android:textSize="@dimen/_10ssp"
        android:text="@string/video_des"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:weightSum="5">

        <TextView
            android:id="@+id/tvContestTitle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/white"
            android:text="@string/contest_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:weightSum="5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvContestOrganizer"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/white"
            android:text="@string/contest_organizer"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:id="@+id/tvPrize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/white"
                android:text="@string/prize"/>
            <TextView
                android:id="@+id/tvPrizeAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/colorPrimary"
                android:text="@string/prize_amount"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_2sdp" />
            <TextView
                android:id="@+id/tvPrizeWon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/colorPrimary"
                android:text="@string/won"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_2sdp" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>