<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="162dp"
        android:background="@drawable/dialog1"
        android:gravity="center"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="101dp"

            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="152dp"
                android:layout_height="39dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/change_pass"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"

                android:text="@string/temp"
                android:textColor="@color/white"
                android:textSize="@dimen/_9ssp" />

        </LinearLayout>

        <View

            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"

            android:background="@color/black" />

        <TextView
            android:id="@+id/ok1"
            android:layout_width="match_parent"
            android:layout_height="44dp"

            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>
</LinearLayout>

